# SentinelOwl

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
requirements/: base.in  base.txt  dev.in  dev.txt
sentinelowl/: __init__.py  cli.py  config.py
sentinelowl/core/: camera.py  detector.py  engine.py  performance.py
sentinelowl/core/models/: __init__.py  base_model.py  placeholder_model.py
src/sentinelowl/: __init__.py  cli.py  config.py  moonraker_plugin.py
src/sentinelowl/core/: camera.py  engine.py  processor.py
src/sentinelowl/core/models/: __init__.py  base_model.py  placeholder_model.py
src/sentinelowl/scripts/: validate.py
src/sentinelowl/services/: printer.py
tests/: test_camera.py  test_cli.py  test_core.py  test_models.py  test_performance.py
