[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelowl"
version = "0.1.0"
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
    "onnxruntime>=1.10",
    "click>=8.0"
]

[project.scripts]
sentinelowl = "sentinelowl.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sentinelowl"]

[project.entry-points."moonraker.plugin"]
ai_guard = "sentinelowl.moonraker_plugin:AIGuardPlugin"